<resources>
    <string name="app_name">Navigation Helper</string>
    <string name="title_activity_maps">Map</string>

    <string name="new_session">New Session</string>
    <string name="current_session">Current Session</string>
    <string name="history">Past Sessions</string>
    <string name="preferences">Preferences</string>
    <string name="help">Help</string>

    <string name="logged_out">Currently logged out</string>
    <string name="current_user">Current user:</string>
    <string name="email_unknown">unknown</string>

    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="register">Register</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="login_success">Login successful!</string>
    <string name="login_fail">Login failed!</string>
    <string name="register_success">Registration successful!</string>
    <string name="register_fail">Registration failed!</string>
    <string name="no_network">No network connection!</string>

    <string name="sync_data_to_server">Sync data to server</string>
    <string name="sync_interval">Sync interval (s)</string>
    <string name="gps_accuracy">GPS accuracy (m)</string>
    <string name="track_gradient">Track gradient</string>
    <string name="gradient_pace_range">Gradient pace range (min/km)</string>
    <string name="one">1</string>
    <string name="five">5</string>
    <string name="sixty">60</string>
    <string name="three_dots">&#8230;</string>

    <string name="session_title">Session title</string>
    <string name="date">Date:</string>
    <string name="checkpoints">Checkpoints:</string>
    <string name="date_sample">31 Jan 2000 12:00:00</string>

    <string name="from_start">From Start</string>
    <string name="from_cp">From CP</string>
    <string name="from_wp">From WP</string>

    <string name="cont_desc_start_btn">Start</string>
    <string name="cont_desc_stop_btn">Stop</string>
    <string name="cont_desc_cp_btn">Add CP</string>
    <string name="cont_desc_wp_btn">Add WP</string>
    <string name="cont_desc_walk_icon">Total Dist</string>
    <string name="cont_desc_fly_icon">Direct Dist</string>
    <string name="cont_desc_time_icon">Time</string>
    <string name="cont_desc_speed_icon">Speed</string>
    <string name="cont_desc_compass_btn">Compass</string>
    <string name="cont_desc_up_dir_user_btn">User-chosen Up</string>
    <string name="cont_desc_up_dir_real_btn">Real Dir Up</string>
    <string name="cont_desc_up_dir_north_btn">North Up</string>
    <string name="cont_desc_centering_btn">Centering</string>
    <string name="cont_desc_no_centering_btn">No Centering</string>
    <string name="cont_desc_rename_btn">Rename</string>
    <string name="cont_desc_delete_btn">Delete</string>
    <string name="cont_desc_email_btn">Email GPX</string>
    <string name="cont_desc_menu_btn">Menu</string>
    <string name="cont_desc_track_icon">Track</string>
    <string name="cont_desc_lat_lng_btn">LatLng</string>

    <string name="unit_dist">&#160;m</string>
    <string name="unit_speed">/km</string>

    <string name="init_dist">0 m</string>
    <string name="init_time">00:00:00</string>
    <string name="init_speed">00:00/km</string>
    <string name="init_lat_lng">Lat: no signal\nLng: no signal</string>

    <string name="lat_desc">Lat:&#160;</string>
    <string name="lng_desc">Lng:&#160;</string>

    <string name="session_started">Session started!</string>
    <string name="session_ended_saved">Session ended &amp; saved!</string>
    <string name="up_dir_north">Up direction: North</string>
    <string name="up_dir_direction">Up direction: Real direction</string>
    <string name="up_dir_user_chosen">Up direction: User chosen</string>
    <string name="center_enabled">Centering: Enabled</string>
    <string name="center_disabled">Centering: Disabled</string>
    <string name="session_name_changed">Session name changed!</string>
    <string name="session_deleted">Session deleted!</string>

    <string name="end_session_question">End and save session?</string>
    <string name="session_title_hint">Enter session title</string>
    <string name="edit_session_title_question">Edit session title?</string>
    <string name="session_new_title_hint">New session title</string>
    <string name="delete_session_question">Delete this session?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="auto_session_name">Unnamed session</string>
    <string name="auto_session_desc">GPS Session</string>

    <string name="invalid_name">Name is required!</string>
    <string name="invalid_email_empty">Email is required!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="invalid_pw_empty">Password is required!</string>
    <string name="invalid_pw_ws">Password must not contain spaces!</string>
    <string name="invalid_pw_length">Password must contain at least 6 characters!</string>
    <string name="invalid_pw_uc_lc">Password must contain upper- and lowercase letters!</string>
    <string name="invalid_pw_number">Password must contain at least 1 number!</string>
    <string name="invalid_pw_special_char">Password must contain at least 1 special character!</string>
    <string name="invalid_pw_confirmation">Passwords must match!</string>

    <string name="send_email_using">Send email using:</string>
    <string name="no_email_clients_installed">There are no email clients installed.</string>
    <string name="email_default_subject">Navigation Helper Session GPX File</string>
    <string name="email_default_body">Session GPX file can be found in the attachments.</string>

    <string name="last_loc_success">Success on getting last location.</string>
    <string name="last_loc_fail">Failed to get last location.</string>
    <string name="lost_loc_permission">Lost location permission.</string>
    <string name="new_loc">New location</string>

    <string name="user_ia_cancelled">User interaction was cancelled.</string>
    <string name="permission_granted">Permission granted.</string>
    <string name="gps_permission_denied">GPS permission denied, unable to continue.</string>
    <string name="gps_needed">Access to GPS needed!</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="help_general_title">How it works</string>
    <string name="help_new_session_title">New Session</string>
    <string name="help_past_sessions_title">Past Sessions</string>
    <string name="help_reg_and_login_title">Register &#38; Log In</string>
    
    <string name="help_start_or_finish_session">Start or finish a session.</string>
    <string name="help_add_cp">Add checkpoint (CP).</string>
    <string name="help_add_wp">Add waypoint (WP).</string>
    <string name="help_toggle_compass">Toggle on-screen compass.</string>
    <string name="help_toggle_up_dir">Switch between map orientations.</string>
    <string name="help_toggle_centering">Toggle current location centering.</string>
    <string name="help_rename_session">Rename session.</string>
    <string name="help_delete_session">Delete session.</string>
    <string name="help_export_session">Export to GPX and email.</string>

    <string name="help_general">Navigation Helper is an application designed to help with navigation
        in unknown terrains. This is done by tracking the location of the device, displaying it on
        map and allowing the user to set map markers (checkpoints and waypoints) along the way, from
        which the travelled and direct distances to their current location are displayed, making it
        possible to triangulate locations. The app can also be used to keep track of your progress
        in orienteering or sporting competitions and training sessions, as it displays the time
        elapsed and the average pace from the map markers.</string>
    <string name="help_new_session">To start a new tracking session, navigate to NEW SESSION from
        the main menu and hit the START button. Once started, a map marker is set to indicate the
        starting location and the continuous drawing of the track begins. If \"Track gradient\" is
        enabled in PREFERENCES, the track will be colored from red to green, indicating the pace of
        movement (pace range also adjustable in PREFERENCES). A static notification is displayed,
        allowing you to also view the session data and add map markers from the lock-screen. To
        finish the current session, hit the STOP button. You will be prompted to name the session to
        save as. If no name is given, the session will be saved as \"Unnamed Session\".</string>
    <string name="help_past_sessions">Every finished session is saved and is accessible in PAST
        SESSIONS. Past sessions can be renamed, deleted and emailed in GPX format.</string>
    <string name="help_reg_and_login">The app allows creating a user and logging in to
        sportmap.akaver.com. While logged in and \"Sync data to server\" is enabled in PREFERENCES,
        sessions will be synced to the named server in real-time, allowing other people to track
        your progress at sportmap.akaver.com. To register or log in, hit the user icon in the main
        menu app bar.</string>
</resources>
